Initisalise repository as Test v0.0.1

--- a/construct.yaml
+++ b/construct.yaml
@@ -1,34 +1,23 @@
-name: UNDERSCORED_PROJECT_NAME
-version: VERSION_NUMBER
-
+name: Test
+version: 0.0.1
 environment_file: environment.yaml
 installer_type: all
 license_file: LICENSE
-
-welcome_image: WELCOME_IMAGE
-header_image: HEADER_IMAGE
-icon_image: ICON_IMAGE
-
-conclusion_text: 'Thank you! You have successfully installed PROJECT_NAME VERSION_NUMBER.'
-
+conclusion_text: Thank you! You have successfully installed Test 0.0.1.
 keep_pkgs: false
 register_python: false
 initialize_conda: false
-
 extra_files:
 - app/bash_bat_scripts/pre_uninstall.sh: pre_uninstall.sh
 - app/bash_bat_scripts/uninstall.sh: uninstall.sh
-- app/menuinst/Welcome.ipynb: PROJECT_NAME/notebooks/Welcome.ipynb
-- app/menuinst/notebook_launcher.json: PROJECT_NAME/notebook_launcher.json
-- app/python_scripts/hide_code_cells.py: PROJECT_NAME/hide_code_cells.py
-- app/python_scripts/include_path.py: PROJECT_NAME/include_path.py
-- notebooks/notebook_latest_versions.yaml: PROJECT_NAME/notebook_latest_versions.yaml
-- requirements.txt: PROJECT_NAME/requirements.txt
-- construct.yaml: PROJECT_NAME/construct.yaml
-
+- app/menuinst/Welcome.ipynb: Test/notebooks/Welcome.ipynb
+- app/menuinst/notebook_launcher.json: Test/notebook_launcher.json
+- app/python_scripts/hide_code_cells.py: Test/hide_code_cells.py
+- app/python_scripts/include_path.py: Test/include_path.py
+- construct.yaml: Test/construct.yaml
+- notebooks/notebook_latest_versions.yaml: Test/notebook_latest_versions.yaml
+- requirements.txt: Test/requirements.txt
 post_install: app/bash_bat_scripts/post_install.bat # [win]
 post_install: app/bash_bat_scripts/post_install.sh # [unix]
-
 pre_uninstall: app/bash_bat_scripts/pre_uninstall.bat # [win]
 pre_uninstall: app/bash_bat_scripts/pre_uninstall.sh # [unix]
-
